sema/testdata/gcc-c90-as-c99/reject/pr101364-1.c
void fruit();
void fruit(
    int b[x],
    short c)
{}
